--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Shop</title>
+    <title>WELCOME</title>
+    <link rel="icon" type="image/x-icon" href="D:\WpSystem\S-1-5-21-1601947504-312833793-2811066009-1001\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\AC\INetCache\3KTYCX21\208482231_848317812464038_6839431846161073134_n[1].jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,12 +42,12 @@
 <body>
     <div class="header">
         <h1>Welcome to My Shop</h1>
-        <p>Discover our exclusive deals</p>
+        <p>Today most exclusive deals</p>
     </div>
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-            <audio src="D:\vs coding\𝙇𝙤𝙨𝙩 𝙨𝙠𝙮 - 𝙁𝙀𝘼𝙍𝙇𝙀𝙎𝙎 ⧸⧸ ( 𝙥𝙚𝙧𝙛𝙚𝙘𝙩𝙞𝙤𝙣 𝙩𝙤 𝙨𝙡𝙤𝙬𝙚𝙙 𝙖𝙣𝙙 𝙧𝙚𝙫𝙚𝙧𝙗).mp3" controls></audio>
+           <img src="">
             <div class="product-info">
                 <h2>Product Name</h2>
                 <p>Product description...</p>
