--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -49,9 +49,11 @@
         <div class="product-card">
            <img src="">
             <div class="product-info">
-                <h2>Product Name</h2>
+                <h2>Product Name:Aryan</h2>
                 <p>Product description...</p>
-                <p>Price: 500₹</p>
+                <p>Price: only 150₹ </p>
+                <p>50% off only for today's deal</p>
+                <p>real price 300₹</p>
             </div>
         </div>
         <!-- End of product block -->
