--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -47,7 +47,7 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-           <img src="">
+           <img src="IMG_20240407_115028.jpg">
             <div class="product-info">
                 <h2>Product Name:Aryan</h2>
                 <p>Product description...</p>
