--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -24,7 +24,7 @@
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
-            width: 300px;
+            width: 20px;;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -47,7 +47,7 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-           <img src="IMG_20240407_115028.jpg">
+           <img src="C:\Users\deepe\Downloads\IMG_20240407_115028.jpg" width="100px" height="auto">
             <div class="product-info">
                 <h2>Product Name:Aryan</h2>
                 <p>Product description...</p>
