--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>WELCOME</title>
-    <link rel="icon" type="image/x-icon" href="D:\WpSystem\S-1-5-21-1601947504-312833793-2811066009-1001\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\AC\INetCache\3KTYCX21\208482231_848317812464038_6839431846161073134_n[1].jpg">
+    <link rel="icon" type="image/x-icon" href="IMG_20240407_115028.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,7 +47,7 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-           <img src="C:\Users\deepe\Downloads\IMG_20240407_115028.jpg" width="100px" height="auto">
+           <img src="IMG_20240407_115028.jpg" width="100px" height="auto">
             <div class="product-info">
                 <h2>Product Name:Aryan</h2>
                 <p>Product description...</p>
