--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -54,7 +54,9 @@
                 <p>Price: only 150₹ </p>
                 <p>50% off only for today's deal</p>
                 <p>real price 300₹</p>
-                <button onclick="https://tenor.com/en-IN/view/ha-gif-20857515">Buy Here</button>
+                <form action="https://media1.tenor.com/m/X3zt412_sykAAAAC/ha.gif">
+                    <input type="submit" value="Buy Here" />
+                </form>
             </div>
         </div>
         <!-- End of product block -->
