--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,32 +10,29 @@
         .header {
             background-color: #f8f9fa;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
         }
         .product-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
             margin-top: 20px;
         }
         .product-card {
             border: 1px solid #ddd;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
-            width: 20px;;
+            width: 100%;;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
         .product-image {
             width: 100%;
-            height: 200px;
+            height: 400px;
             object-fit: cover;
         }
         .product-info {
-            padding: 20px;
+            padding: 10px;
         }
     </style>
 </head>
@@ -47,10 +44,10 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-<iframe width="100%" height="auto" src="VID-20240429-WA0000.mp4" title="Lana Del Rey - Summertime Sadness (Official Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+<iframe width="100%" height="400px" src="VID-20240429-WA0000.mp4" title="Lana Del Rey - Summertime Sadness (Official Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
             <div class="product-info">
-                <h2>Product Name:Aryan</h2>
-                <p>Product description...</p>
+                <h2>Product Name:Alien</h2>
+                <p>Product description: unknown</p>
                 <p>Price: only 150₹ </p>
                 <p>50% off only for today's deal</p>
                 <p>real price 300₹</p>
