--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -16,7 +16,7 @@
             margin-top: 20px;
         }
         .product-card {
-            border: 1px solid #ddd;
+            border: 10px solid #ddd;
             margin-bottom: 10px;
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -44,7 +44,7 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-<iframe width="100%" height="400px" src="VID-20240429-WA0000.mp4" title="Lana Del Rey - Summertime Sadness (Official Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+<iframe width="100%" height="400px" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
             <div class="product-info">
                 <h2>Product Name:Alien</h2>
                 <p>Product description: unknown</p>
