--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -44,7 +44,7 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-<iframe width="100%" height="400px" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+<iframe width="auto" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
             <div class="product-info">
                 <h2>Product Name:Alien</h2>
                 <p>Product description: unknown</p>
