--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,24 +11,26 @@
             background-color: #f8f9fa;
             text-align: center;
             padding: 10px;
+            height: auto;
+            width: auto;
         }
         .product-grid {
             margin-top: 20px;
         }
         .product-card {
-            border: 10px solid #ddd;
+            border: 1px solid #ddd;
             margin-bottom: 10px;
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
-            width: 100%;;
+            width:auto;;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
         .product-image {
-            width: 100%;
-            height: 400px;
+            width: auto;
+            height: auto;
             object-fit: cover;
         }
         .product-info {
