--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -30,7 +30,7 @@
         }
         .product-image {
             width: auto;
-            height: 400px;
+            height: auto;
             object-fit: cover;
         }
         .product-info {
