--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Welcome to My Shop</h1>
+        <h1>🌸Welcome🌸</h1>
         <p>Today most exclusive deals</p>
     </div>
     <div class="product-grid">
