--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,8 +11,8 @@
             background-color: #f8f9fa;
             text-align: center;
             padding: 10px;
-            height: auto;
-            width: auto;
+            height: 100%;
+            width: 100%;
         }
         .product-grid {
             margin-top: 20px;
@@ -23,14 +23,14 @@
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
-            width:auto;;
+            width:100%;;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
         .product-image {
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
         }
         .product-info {
@@ -46,19 +46,12 @@
     <div class="product-grid">
         <!-- Repeat this block for each product -->
         <div class="product-card">
-<iframe width="auto" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-            <div class="product-info">
-                <h2>Product Name:Alien</h2>
-                <p>Product description: unknown</p>
-                <p>Price: only 150₹ </p>
-                <p>50% off only for today's deal</p>
-                <p>real price 300₹</p>
+<center><iframe width="auto" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
                 <form action="https://media1.tenor.com/m/X3zt412_sykAAAAC/ha.gif">
-                    <input type="submit" value="Buy Here" />
+                    <input type="submit" value="Click here! A surprise for you" />
                 </form>
             </div>
         </div>
-        <!-- End of product block -->
     </div>
 </body>
 </html>
