--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,8 +11,8 @@
             background-color: #f8f9fa;
             text-align: center;
             padding: 10px;
-            height: 100%;
-            width: 100%;
+            height: auto;
+            width:auto;
         }
         .product-grid {
             margin-top: 20px;
@@ -23,7 +23,7 @@
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
-            width:100%;;
+            width:50%;;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -44,9 +44,8 @@
         <p>Today most exclusive deals</p>
     </div>
     <div class="product-grid">
-        <!-- Repeat this block for each product -->
         <div class="product-card">
-<center><iframe width="auto" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
+<center><iframe width="100%" height="100%" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
                 <form action="https://media1.tenor.com/m/X3zt412_sykAAAAC/ha.gif">
                     <input type="submit" value="Click here! A surprise for you" />
                 </form>
