--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -23,15 +23,15 @@
             flex: 0 1 calc(25% - 1em);
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
-            width:50%;;
+            width:auto;;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         }
         .product-image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            width: auto;
+            height:auto;
+            object-fit:fill;
         }
         .product-info {
             padding: 10px;
