--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -46,7 +46,7 @@
     <div class="product-grid">
         <div class="product-card">
 <center><iframe width="100%" height="100%" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
-                <form action="https://media1.tenor.com/m/X3zt412_sykAAAAC/ha.gif">
+                <form action="https://c.tenor.com/X3zt412_sykAAAAC/tenor.gif">
                     <input type="submit" value="Click here! A surprise for you" />
                 </form>
             </div>
