--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,7 +10,7 @@
         .header {
             background-color: #f8f9fa;
             text-align: center;
-            padding: 10px;
+            padding:10px;
             height: auto;
             width:auto;
         }
@@ -18,20 +18,18 @@
             margin-top: 20px;
         }
         .product-card {
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
-            flex: 0 1 calc(25% - 1em);
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            width:auto;;
+            border:1px solid #ddd;
+            margin-bottom:10px;
+            box-shadow: 0 4px 8px 0 rgba(176, 78, 185, 0.2);
+            transition: 0.5s;
+            width:100%;;
         }
         .product-card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            box-shadow: 0 8px 16px 0 rgb(184, 74, 156);
         }
         .product-image {
-            width: auto;
-            height:auto;
-            object-fit:fill;
+            width: 100%;
+            height:100%;
         }
         .product-info {
             padding: 10px;
