--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -18,18 +18,19 @@
             margin-top: 20px;
         }
         .product-card {
-            border:1px solid #ddd;
+            border:0px solid #ddd;
             margin-bottom:10px;
             box-shadow: 0 4px 8px 0 rgba(176, 78, 185, 0.2);
             transition: 0.5s;
-            width:100%;;
+            width:auto;;
+            opacity:1;
         }
         .product-card:hover {
             box-shadow: 0 8px 16px 0 rgb(184, 74, 156);
         }
         .product-image {
-            width: 100%;
-            height:100%;
+            width:auto%;
+            height:auto%;
         }
         .product-info {
             padding: 10px;
@@ -42,8 +43,8 @@
         <p>Today most exclusive deals</p>
     </div>
     <div class="product-grid">
+      <center><iframe width="auto" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
         <div class="product-card">
-<center><iframe width="100%" height="100%" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
                 <form action="https://c.tenor.com/X3zt412_sykAAAAC/tenor.gif">
                     <input type="submit" value="Click here! A surprise for you" />
                 </form>
