--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,30 +10,37 @@
         .header {
             background-color: #f8f9fa;
             text-align: center;
-            padding:10px;
-            height: auto;
-            width:auto;
+            padding: 1px;
         }
         .product-grid {
-            margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 40px;
         }
         .product-card {
-            border:0px solid #ddd;
-            margin-bottom:10px;
-            box-shadow: 0 4px 8px 0 rgba(176, 78, 185, 0.2);
-            transition: 0.5s;
-            width:auto;;
-            opacity:1;
+            border: 0px solid #ddd;
+            margin-bottom: 40px;
+            flex: 0 1 calc(25% - 1em);
+            box-shadow: 0 4px 8px 0 rgb(184, 74, 156);
+            transition: 0.3s;
+            width: auto;
         }
         .product-card:hover {
-            box-shadow: 0 8px 16px 0 rgb(184, 74, 156);
+            box-shadow: 0 8px 16px rgb(184, 74, 156);
         }
         .product-image {
-            width:auto%;
-            height:auto%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         .product-info {
-            padding: 10px;
+            padding: 20px;
+        }
+        .video-container{     
+         display: flex;
+         justify-content: center;
+         align-items: center;
         }
     </style>
 </head>
@@ -43,7 +50,7 @@
         <p>Today most exclusive deals</p>
     </div>
     <div class="product-grid">
-      <center><iframe width="auto" height="auto" src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
+      <center><iframe src="VID-20240429-WA0000.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center><div class="product-info" style="text-align: center;">
         <div class="product-card">
                 <form action="https://c.tenor.com/X3zt412_sykAAAAC/tenor.gif">
                     <input type="submit" value="Click here! A surprise for you" />
