--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -126,7 +126,7 @@ footer .glass {
 </section>
 <section class="product-card">
 <h2>Watch Our Featured Video</h2>
-<video width="100%" height="auto" src="VID-20240528-WA0001.mp4" type="video/mp4" controls>
+<video width="100%" height="auto" src="VID-20240429-WA0000.mp4" type="video/mp4"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls>
 </video>
 </section>
 <footer class="product-card">
