--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -112,7 +112,7 @@
     </div>
   </div>
 <header class="product-card">
-<h1>🌷Welcome🌷</h1>
+<center></center><h1>🌷Welcome🌷</h1></center>
 <div class="product-card"><p>Experience the modern design trend of Glassmorphism!</p></div>
 </header>
 <section class="product-card">
@@ -128,12 +128,12 @@
 </section>
 <section class="product-card">
 <h2>Listen to Our Latest Podcast</h2>
-<audio src="𝙇𝙤𝙨𝙩 𝙨𝙠𝙮 - 𝙁𝙀𝘼𝙍𝙇𝙀𝙎𝙎 ⧸⧸ ( 𝙥𝙚𝙧𝙛𝙚𝙘𝙩𝙞𝙤𝙣 𝙩𝙤 𝙨𝙡𝙤𝙬𝙚𝙙 𝙖𝙣𝙙 𝙧𝙚𝙫𝙚𝙧𝙗).mp3" controls>
+<audio src="INZO - Overthinker.mp3" controls>
 </audio>
 </section>
 <section class="product-card">
 <h2>Watch Our Featured Video</h2>
-<video width="100%" height="auto" src="VID-20240429-WA0000.mp4.mp4" type="video/mp4" controls>
+<video width="100%" height="auto" src="VID-20240429-WA0000.mp4.mp4" allow=" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen" controls>
 </video>
 </section>
 <footer style="background-image:url(WhatsApp Image 2024-05-28 at 22.45.53_e33e38bd.jpg);" class="product-card">
