--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -133,6 +133,8 @@
 </section>
 <section class="product-card">
 <h2>Watch Our Featured Video</h2>
+  <video width="100%" height="auto" src="VID-20240429-WA0000.mp4.mp4" allow=" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen" controls>
+</video>
 <video width="100%" height="auto" src="VID-20240429-WA0000.mp4.mp4" allow=" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen" controls>
 </video>
 </section>
