--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -132,13 +132,14 @@
 </audio>
 </section>
 <section class="product-card">
-<h2>Watch Our Featured Video</h2>
-  <video width="100%" height="auto" src="VID-20240429-WA0000.mp4.mp4" allow=" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen" controls>
+<h2>I think...</h2>
+  <video>
+<iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
 </video>
-<video width="100%" height="auto" src="VID-20240429-WA0000.mp4.mp4" allow=" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen" controls>
+<iframe width="100%" height="auto" src="VID-20240429-WA0000" title="unknown" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
 </video>
 </section>
-<footer style="background-image:url(WhatsApp Image 2024-05-28 at 22.45.53_e33e38bd.jpg);" class="product-card">
+<footer  class="product-card">
 <p>© 2024 Alien Inc. All rights reserved.</p>
 </footer>
 </body>
