--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -127,7 +127,7 @@
 </div>
 </section>
 <section class="product-card">
-<h2>Listen to Our Latest Podcast</h2>
+<h2> But how we can do anything without thinking..</h2>
 <audio src="INZO - Overthinker.mp3" controls>
 </audio>
 </section>
@@ -136,6 +136,7 @@
   <video>
 <iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
 </video>
+  <video>
 <iframe width="100%" height="auto" src="VID-20240429-WA0000" title="unknown" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
 </video>
 </section>
