--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -112,8 +112,8 @@
     </div>
   </div>
 <header class="product-card">
-<center></center><h1>🌷Welcome🌷</h1></center>
-<div class="product-card"><p>Experience the modern design trend of Glassmorphism!</p></div>
+<center><h1>🌷Welcome🌷</h1></center></center>
+<div class="product-card"><p></p></div>
 </header>
 <section class="product-card">
 <div class="product-card">
@@ -133,10 +133,10 @@
 </section>
 <section class="product-card">
 <h2>I think...</h2>
-  <video>
+  <video class="product-card" controls>
 <iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls></iframe>  
 </video>
-  <video>
+  <video class="product-card" controls>
 <iframe width="100%" height="auto" src="VID-20240429-WA0000" title="unknown" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls></iframe>  
 </video>
 </section>
