--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -128,17 +128,13 @@
 </section>
 <section class="product-card">
 <h2> But how we can do anything without thinking..</h2>
-<audio src="INZO - Overthinker.mp3" controls>
+<audio class="product-card" src="INZO - Overthinker.mp3" controls>
 </audio>
 </section>
 <section class="product-card">
 <h2>I think...</h2>
-  <video class="product-card" controls>
-<iframe width="100%" height="auto" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls></iframe>  
-</video>
-  <video class="product-card" controls>
-<iframe width="100%" height="auto" src="VID-20240429-WA0000" title="unknown" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen controls></iframe>  
-</video>
+  <video class="product-card" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4" autoplay; controls>
+  <video class="product-card" src="VID-20240429-WA0000" controls></video>
 </section>
 <footer  class="product-card">
 <p>© 2024 Alien Inc. All rights reserved.</p>
