--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -13,8 +13,6 @@
       background-color: #f8f9fa;
       text-align: center;
       padding: 1px;
-      
-    
   }
   .product-grid {
       display: flex;
@@ -128,7 +126,7 @@
 </section>
 <section class="product-card">
 <h2> But how we can do anything without thinking..</h2>
-<audio class="product-card" src="INZO - Overthinker.mp3" controls>
+<audio src="INZO - Overthinker.mp3" controls>
 </audio>
 </section>
 <section class="product-card">
