--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -98,11 +98,13 @@
   <div class="product-card">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="topnav">
-      <a href="#home" class="product-card">Logo</a>
+     <a href="README.md" class="product-card">Home</a>
       <div id="myLinks">
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJnBrNvfETvfFllQQOiJOvzu&si=yrV0U31e0KIQn5nK">Playlist 1</a>
+        <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJn_j_eF1XqjOJFda1DoulQV&si=_U8B3jd45kcWsbXX">playlist 2</a>
+        <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJkwljskSF35mNFHA3opoaPq&si=Sd4m5RO1-xnSIZK8">Playlist 3</a>
+        <a href="mailto:deependrayad2@gmail.com">Contact</a>
+        <a href="#about">About: I am an Alien</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -111,7 +113,7 @@
   </div>
 <header class="product-card">
 <center><h1>🌷Welcome🌷</h1></center></center>
-<div class="product-card"><p></p></div>
+<div class="product-card"><iframe width="1280" height="720" src="https://www.youtube.com/embed/xh6judJ8IxU" title="OST《陈情令 The Untamed》 | 《无羁》 Wu Ji (2020 Special Ver) by Xiao Zhan &amp; Wang Yibo【MULTI SUB】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 </header>
 <section class="product-card">
 <div class="product-card">
@@ -131,8 +133,8 @@
 </section>
 <section class="product-card">
 <h2>I think...</h2>
-  <video class="product-card" src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4" autoplay; controls>
-  <video class="product-card" src="VID-20240429-WA0000" controls></video>
+  <video src="The Boy, the Mole, the Fox and the Horse - Look to The Dawn.mp4.mp4"controls></video>
+  <video src="VID-20240429-WA0000" controls></video>
 </section>
 <footer  class="product-card">
 <p>© 2024 Alien Inc. All rights reserved.</p>
