--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -98,7 +98,7 @@
   <div class="product-card">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="topnav">
-     <a href="README.md" class="product-card">Home</a>
+     <a href="https://patanhihaikonhu.github.io/We_Are_Alien/" class="product-card">Home</a>
       <div id="myLinks">
         <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJnBrNvfETvfFllQQOiJOvzu&si=yrV0U31e0KIQn5nK">Playlist 1</a>
         <a href="https://youtube.com/playlist?list=PLyLc3DNwDAJn_j_eF1XqjOJFda1DoulQV&si=_U8B3jd45kcWsbXX">playlist 2</a>
