--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -150,6 +150,49 @@
 <iframe width="100%" height="auto" src="VID-20240308-WA0022.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
         </div>
 </section>
+<div class="product-card">
+<form> 
+  <label for="uname">  
+      Name
+  </label> 
+  <input class="product-card" style="border: 1px;" type="text" id="uname" 
+         name="uname" placeholder="Enter your name" required> 
+<br>
+
+      Email Address 
+  </label> 
+  <input class="product-card" style="border: 1px;" type="email" id="email" 
+         name="email" placeholder="Enter your email Address" required> 
+<br>
+      Phone No 
+  </label> 
+  <input class="product-card" style="border: 1px;" type="tel" id="phone" 
+         name="phone" placeholder="Enter your mobile number" required> 
+<br>
+  <label> 
+      Do you like this? 
+  </label> 
+  <div class="radio-group"> 
+      <input type="radio" id="yes" 
+             name="satisfy" value="yes" checked> 
+      <label for="yes">Yes</label> 
+
+      <input type="radio" id="no" 
+             name="satisfy" value="no"> 
+      <label for="no">No</label> 
+  </div> 
+
+  <label for="msg"> 
+      Write your Suggestions : 
+  </label> 
+  <textarea class="product-card" style="border: 20px;" id="msg" name="msg" 
+            rows="4" cols="10"" required> 
+  </textarea> 
+  <center><label class="product-grid" ><input type="submit">
+  </label></center>
+  </button> 
+</form> 
+</div>
 <footer  class="product-card">
 <p>© 2024 Alien Inc. All rights reserved.</p>
 </footer>
