--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -153,7 +153,7 @@
         </div>
 </section>
 <div class="product-card">
-<form> 
+<form  action="https://getform.io/f/lakmzeda" method="POST"> 
   <label for="uname">  
       Name
   </label> 
