--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -135,7 +135,7 @@
 <h2> But how we can do anything without thinking..</h2>
 <audio src="INZO - Overthinker.mp3" controls>
 </audio>
-</section>
+</section>/*
 <section class="product-card">
 <h2>I think...</h2>
  <div class="product-card">
@@ -150,7 +150,7 @@
         </div>
    <div class="product-card">
 <iframe width="100%" height="auto" src="VID-20240308-WA0022.mp4" title="unknown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-        </div>
+        </div>*/
 </section>
 <div class="product-card">
 <form  action="https://getform.io/f/lakmzeda" method="POST"> 
